--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     href="#contact"><img src="https://content.codecademy.com/courses/learn-html/elements-and-structure/profile.jpg"></a>
     <h3>by Isabelle Rodriguez | 1 day ago</h3>
     <h1>An Insider's Guide to NYFW</h1>
-    <img src="https://content.codecademy.com/courses/learn-html/elements-and-structure/image-one.jpeg">
+    <img src="https://content.codecademy.com/courses/learn-html/elements-and-structure/image-one.jpeg"
+    alt="Picture of author">
     <br><br>
     <p><a
         href="https://en.wikipedia.org/wiki/New_York_Fashion_Week."
